# aut_om_hgnn

./: .gitignore  pyproject.toml
src/: train.py  train_all_configs_multiseed.py  train_multiseed.py
src/config/: __init__.py  batch_schema.py  train_config.py  train_enum.py
src/config/yaml/: g1_bhmg_com_mi_150.yaml  g1_bhmg_com_mi_nohist.yaml  g1_bhmg_com_ms_150.yaml  g1_bhmg_com_ms_nohist.yaml  g1_bhmg_contact_mi_150.yaml  g1_bhmg_contact_mi_nohist.yaml  g1_bhmg_contact_ms_150.yaml  g1_bhmg_contact_ms_nohist.yaml  g1_bhmg_grf_mi_150.yaml  g1_bhmg_grf_mi_nohist.yaml  g1_bhmg_grf_ms_150.yaml  g1_bhmg_grf_ms_nohist.yaml  go2_qhmg_com_mi_150.yaml  go2_qhmg_com_mi_nohist.yaml  go2_qhmg_com_ms_150.yaml  go2_qhmg_com_ms_nohist.yaml  go2_qhmg_contact_mi_150.yaml  go2_qhmg_contact_mi_nohist.yaml  go2_qhmg_contact_ms_150.yaml  go2_qhmg_contact_ms_nohist.yaml  go2_qhmg_grf_mi_150.yaml  go2_qhmg_grf_mi_nohist.yaml  go2_qhmg_grf_ms_150.yaml  go2_qhmg_grf_ms_nohist.yaml
src/data/dataset/: __init__.py  base_dataset.py  unitree_g1_dataset.py  unitree_go2_dataset.py
src/graph/feature/: __init__.py  base_feature.py  bhmg_feature.py  qhmg_feature.py
src/graph/morphology/: base_morphology.py
src/graph/parser/: __init__.py  base_parser.py  unitree_g1_usd_parser.py  unitree_go2_usd_parser.py
src/graph/spec/: __init__.py  base_spec.py  bhmg.py  qhmg.py
src/graph/symmetry/: __init__.py  base_symmetry.py  c2_symmetry.py  k4_symmetry.py
src/model/architecture/: __init__.py  base_model.py  mi_hgnn.py  ms_hgnn.py
src/model/training/: __init__.py  base_lit_model.py  (+2 more)
(+9 files in other folders)
